log
Thu 28 Mar 2024 02:24:40 PM UTC: 
 list.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:37: error: expected expression before ‘>’ token
   42 |   if (list -> current) return list- > current -> data;
      |                                     ^
Compilation failed
3309063
Thu 28 Mar 2024 02:24:57 PM UTC: 
 tests:  5|4
total_score: 25/70
e63f348
Thu 28 Mar 2024 02:32:59 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:55:12: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   55 |   if (list -> next == NULL)
      |            ^~
list.c:57:5: error: expected identifier before ‘return’
   57 |     return list -> data;
      |     ^~~~~~
list.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
772705d
Thu 28 Mar 2024 02:37:48 PM UTC: 
 list.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
f5804d6
Thu 28 Mar 2024 02:38:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2b4d3b3
Thu 28 Mar 2024 02:42:37 PM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:56:21: error: assignment to ‘Node *’ from incompatible pointer type ‘void * (*)(List *)’ {aka ‘void * (*)(struct List *)’} [-Werror=incompatible-pointer-types]
   56 |     list -> current = nextList;
      |                     ^
cc1: all warnings being treated as errors
Compilation failed
f4ba0ff
Thu 28 Mar 2024 02:43:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
bab34c4
Thu 28 Mar 2024 02:47:10 PM UTC: 
 list.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:56:1: error: expected ‘;’ before ‘}’ token
   56 | }
      | ^
Compilation failed
c6979e0
